# world-cheese-awards-analysis

./: README.md  kaggle.json  pyproject.toml  world_cheese_awards_2021_EDA.ipynb
data/: world_cheese_awards_2021_augmented.csv
