[tool.poetry]
name = "world-cheese-awards-analysis"
version = "0.1.0"
description = ""
authors = ["NanoClem <clemdecoop.pro@gmail.com>"]
readme = "README.md"
packages = [{include = "world_cheese_awards_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
kaggle = "^1.5.12"
geopandas = "^0.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
